@@ -153,14 +153,16 @@ int main(int argc, char**argv)
 #endif
 {
 #if defined WIN32
+#ifndef _DEBUG
 	CreateMutexA(0, FALSE, "Local\\Domoticz"); 
     if(GetLastError() == ERROR_ALREADY_EXISTS) { 
 		MessageBox(HWND_DESKTOP,"Another instance of Domoticz is already running!","Domoticz",MB_OK);
         return -1; 
 	}
+#endif //_DEBUG
 	bool bStartWebBrowser=true;
 	RedirectIOToConsole();
-#endif
+#endif //WIN32
 
 	szStartupFolder="";
 	szWWWFolder="";
